Managed to successfully save a donor record

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- APP DEFAULT -->
-    <color name="colorPrimary">#424242</color>
-    <color name="colorPrimaryDark">#212121</color>
+    <color name="colorPrimary">#620000</color>
+    <color name="colorPrimaryDark">#4E0000</color>
+    <color name="colorAccent">#FF4081</color>
     <color name="colorPrimaryLight">#555555</color>
-    <color name="colorAccent">#AAAAAA</color>
 
     <!-- APP GENERAL -->
     <color name="colorRed">#F44336</color>
     <color name="colorGreen">#4CAF50</color>
+    <color name="white">#FFF</color>
+    <color name="text_bg_grey">#dcdcdc</color>
+    <color name="beige"> #424949</color>
 </resources>
